Start api tests

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,12 +1,10 @@
-threads=1
-
 # Web tests
-browserName=chrome
-browserVersion=108
-baseUrl=https://www.saucedemo.com
-browserSize=1920x1080
-pageLoadTimeout=10000
-timeout=10000
-headless=false
-isRemote=false
-remoteUrl=https://user1:1234@selenoid.autotests.cloud
+web.browserName=chrome
+web.browserVersion=109
+web.baseUrl=https://www.saucedemo.com
+web.browserSize=1920x1080
+web.pageLoadTimeout=10000
+web.timeout=10000
+web.headless=false
+web.isRemote=false
+web.remoteUrl=https://user1:1234@selenoid.autotests.cloud
