--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,10 @@ dependencies {
             "com.codeborne:selenide-full-screenshot:${selenideVersion}",
             "com.github.javafaker:javafaker:1.0.2",
             "io.qameta.allure:allure-selenide:${allureVersion}",
-            "org.aeonbits.owner:owner:1.0.12"
+            "org.aeonbits.owner:owner:1.0.12",
+            "io.rest-assured:rest-assured:5.3.0",
+            "io.qameta.allure:allure-rest-assured:${allureVersion}",
+            "com.fasterxml.jackson.core:jackson-databind:2.14.1"
     )
 
     testRuntimeOnly(
