Update test.properties file

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,10 +1,10 @@
 # Web tests
-web.browserName=chrome
-web.browserVersion=109
-web.baseUrl=https://www.saucedemo.com
-web.browserSize=1920x1080
-web.pageLoadTimeout=10000
-web.timeout=10000
-web.headless=false
-web.isRemote=false
-web.remoteUrl=https://user1:1234@selenoid.autotests.cloud
+webBrowserName=chrome
+webBrowserVersion=109
+webBaseUrl=https://www.saucedemo.com
+webBrowserSize=1920x1080
+webPageLoadTimeout=10000
+webTimeout=10000
+webIsHeadless=false
+webIsRemote=false
+webRemoteUrl=https://user1:1234@selenoid.autotests.cloud
