--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -8,3 +8,7 @@ webTimeout=10000
 webIsHeadless=false
 webIsRemote=false
 webRemoteUrl=https://user1:1234@selenoid.autotests.cloud
+
+# Api
+dummyToken=62148cf0571de83a9a0c3403
+dummyBaseUrl=https://dummyapi.io/data/v1
