--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -12,3 +12,22 @@ webRemoteUrl=https://user1:1234@selenoid.autotests.cloud
 # Api
 dummyToken=62148cf0571de83a9a0c3403
 dummyBaseUrl=https://dummyapi.io/data/v1
+
+# Browserstack or local run flag
+mobilePlatform=local
+
+# Mobile browserstack
+browserstack.user=dansmith_7Rs1Hc
+browserstack.password=EsPUg1ktKtmNQqqtkbsJ
+buildName=browserstack-build-1
+androidVersion=9.0
+androidDevice=Google Pixel 3
+androidApp=bs://59cad3bf78f894bbb0b4f88846b0aa0cc1ca35e1
+
+# Android local
+android.local.version=11.0
+android.local.device=Pixel 4
+android.local.app.path=src/test/resources/apps/android/ozon.apk
+appPackage=
+appActivity=
+local.url=http://localhost:4723/wd/hub
