--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -13,7 +13,7 @@ webRemoteUrl=https://user1:1234@selenoid.autotests.cloud
 dummyToken=62148cf0571de83a9a0c3403
 dummyBaseUrl=https://dummyapi.io/data/v1
 
-# Browserstack or local run flag
+# 'browserstack' or 'local' run flag
 mobilePlatform=local
 
 # Mobile browserstack
