Update readme file

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -19,7 +19,7 @@ mobilePlatform=local
 # Mobile browserstack
 browserstack.user=dansmith_7Rs1Hc
 browserstack.password=EsPUg1ktKtmNQqqtkbsJ
-buildName=browserstack-build-1
+buildName=build-1
 androidVersion=9.0
 androidDevice=Google Pixel 3
 androidApp=bs://59cad3bf78f894bbb0b4f88846b0aa0cc1ca35e1
